--- a/src/LifeOGame.vcxproj
+++ b/src/LifeOGame.vcxproj
@@ -84,6 +84,7 @@
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>..\lib\;$(LibraryPath)</LibraryPath>
     <IncludePath>..\include\;$(IncludePath)</IncludePath>
+    <OutDir>..\compiled\MVSC\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
