--- a/src/LifeOGame.vcxproj
+++ b/src/LifeOGame.vcxproj
@@ -85,6 +85,7 @@
     <LibraryPath>..\lib\;$(LibraryPath)</LibraryPath>
     <IncludePath>..\include\;$(IncludePath)</IncludePath>
     <OutDir>..\compiled\MVSC\</OutDir>
+    <TargetName>life.exe</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
